Analyse_Bison/parser.output
Terminals unused in grammar

    KW_REPEAT
    KW_UNTIL


State 159 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON

    2 Decls: Decls Decl
    3      | ε

    4 Decl: KW_SET IDENTIFIER BasicType OptInit SEP_SEMICOLON
    5     | KW_SET IDENTIFIER IDENTIFIER OptInit SEP_SEMICOLON
    6     | RecordDecl
    7     | ArrayDecl
    8     | DictDecl

    9 BasicType: KW_INTEGER
   10          | KW_STRING
   11          | KW_FLOAT
   12          | KW_BOOLEAN

   13 RecordDecl: KW_CREATE KW_RECORD IDENTIFIER SEP_LPAREN FieldList SEP_RPAREN SEP_SEMICOLON

   14 FieldList: Field
   15          | FieldList SEP_COMMA Field

   16 Field: IDENTIFIER Type

   17 ArrayDecl: KW_SET IDENTIFIER KW_ARRAY SEP_LBRACKET Type SEP_COMMA INT_LITERAL SEP_RBRACKET ArrayInit SEP_SEMICOLON

   18 ArrayInit: OP_EQ SEP_LBRACE ExprList SEP_RBRACE
   19          | OP_EQ Expr
   20          | ε

   21 DictDecl: KW_SET IDENTIFIER KW_DICTIONARY OP_LT Type SEP_COMMA Type OP_GT SEP_SEMICOLON

   22 OptInit: OP_EQ Expr
   23        | ε

   24 ExprList: Expr
   25         | ExprList SEP_COMMA Expr

   26 Type: KW_INTEGER
   27     | KW_STRING
   28     | KW_FLOAT
   29     | KW_BOOLEAN

   30 Instrs: ε
   31       | Instrs Instr

   32 Instr: Assign
   33      | Print
   34      | If
   35      | While
   36      | For
   37      | Case
   38      | Input
   39      | ForEach

   40 Assign: IDENTIFIER OP_EQ Expr SEP_SEMICOLON
   41       | IDENTIFIER SEP_DOT IDENTIFIER OP_EQ Expr SEP_SEMICOLON
   42       | IDENTIFIER SEP_LBRACKET Expr SEP_RBRACKET OP_EQ Expr SEP_SEMICOLON

   43 Print: KW_PRINT Expr SEP_SEMICOLON

   44 Input: KW_INPUT IDENTIFIER SEP_SEMICOLON

   45 If: KW_WHEN Cond KW_THEN Instrs OptElse KW_END KW_WHEN SEP_SEMICOLON

   46 OptElse: KW_ELSE Instrs
   47        | KW_OTHERWISE Instrs
   48        | ε

   49 While: KW_LOOP KW_WHEN Cond Instrs KW_END KW_LOOP SEP_SEMICOLON

   50 For: KW_LOOP KW_ITERATE IDENTIFIER KW_FROM Expr KW_TO Expr Instrs KW_END KW_LOOP SEP_SEMICOLON

   51 ForEach: KW_FOREACH IDENTIFIER KW_IN IDENTIFIER SEP_LBRACE Instrs SEP_RBRACE

   52 Case: KW_CASE CaseList KW_END KW_CASE SEP_SEMICOLON
   53     | KW_CASE CaseList KW_ELSE Instrs KW_END KW_CASE SEP_SEMICOLON

   54 CaseList: CaseItem
   55         | CaseList CaseItem

   56 CaseItem: KW_WHEN Cond KW_THEN Instrs

   57 Expr: Expr OP_PLUS Term
   58     | Expr OP_MINUS Term
   59     | Term

   60 Term: Term OP_MULT Factor
   61     | Term OP_DIV Factor
   62     | Term OP_MOD Factor
   63     | Factor

   64 Factor: INT_LITERAL
   65       | FLOAT_LITERAL
   66       | STRING_LITERAL
   67       | KW_TRUE
   68       | KW_FALSE
   69       | IDENTIFIER
   70       | IDENTIFIER SEP_DOT IDENTIFIER
   71       | IDENTIFIER SEP_LBRACKET Expr SEP_RBRACKET
   72       | SEP_LPAREN Expr SEP_RPAREN
   73       | OP_MINUS Factor

   74 Cond: Cond OP_AND Cond
   75     | Cond OP_OR Cond
   76     | OP_NOT Cond
   77     | Expr OP_EQ Expr
   78     | Expr OP_NEQ Expr
   79     | Expr OP_LT Expr
   80     | Expr OP_GT Expr
   81     | Expr OP_LTE Expr
   82     | Expr OP_GTE Expr
   83     | SEP_LPAREN Cond SEP_RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <str> (258) 1 4 5 13 16 17 21 40 41 42 44 50 51 69 70 71
    STRING_LITERAL <str> (259) 66
    INT_LITERAL <ival> (260) 17 64
    FLOAT_LITERAL <fval> (261) 65
    KW_BEGIN (262) 1
    KW_PROGRAM (263) 1
    KW_END (264) 1 45 49 50 52 53
    KW_SET (265) 4 5 17 21
    KW_CREATE (266) 13
    KW_RECORD (267) 13
    KW_ARRAY (268) 17
    KW_DICTIONARY (269) 21
    KW_INTEGER (270) 9 26
    KW_STRING (271) 10 27
    KW_FLOAT (272) 11 28
    KW_BOOLEAN (273) 12 29
    KW_TRUE (274) 67
    KW_FALSE (275) 68
    KW_WHEN (276) 45 49 56
    KW_THEN (277) 45 56
    KW_OTHERWISE (278) 47
    KW_CASE (279) 52 53
    KW_ELSE (280) 46 53
    KW_LOOP (281) 49 50
    KW_ITERATE (282) 50
    KW_FROM (283) 50
    KW_TO (284) 50
    KW_REPEAT (285)
    KW_UNTIL (286)
    KW_FOREACH (287) 51
    KW_IN (288) 51
    KW_PRINT (289) 43
    KW_INPUT (290) 44
    OP_AND (291) 74
    OP_OR (292) 75
    OP_NOT (293) 76
    OP_EQ (294) 18 19 22 40 41 42 77
    OP_NEQ (295) 78
    OP_LT (296) 21 79
    OP_GT (297) 21 80
    OP_LTE (298) 81
    OP_GTE (299) 82
    OP_PLUS (300) 57
    OP_MINUS (301) 58 73
    OP_MULT (302) 60
    OP_DIV (303) 61
    OP_MOD (304) 62
    SEP_LPAREN (305) 13 72 83
    SEP_RPAREN (306) 13 72 83
    SEP_LBRACKET (307) 17 42 71
    SEP_RBRACKET (308) 17 42 71
    SEP_LBRACE (309) 18 51
    SEP_RBRACE (310) 18 51
    SEP_COMMA (311) 15 17 21 25
    SEP_SEMICOLON (312) 1 4 5 13 17 21 40 41 42 43 44 45 49 50 52 53
    SEP_DOT (313) 41 70
    UMINUS (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    Program <node> (61)
        on left: 1
        on right: 0
    Decls <node> (62)
        on left: 2 3
        on right: 1 2
    Decl <node> (63)
        on left: 4 5 6 7 8
        on right: 2
    BasicType <dtype> (64)
        on left: 9 10 11 12
        on right: 4
    RecordDecl <node> (65)
        on left: 13
        on right: 6
    FieldList <node> (66)
        on left: 14 15
        on right: 13 15
    Field <node> (67)
        on left: 16
        on right: 14 15
    ArrayDecl <node> (68)
        on left: 17
        on right: 7
    ArrayInit <node> (69)
        on left: 18 19 20
        on right: 17
    DictDecl <node> (70)
        on left: 21
        on right: 8
    OptInit <node> (71)
        on left: 22 23
        on right: 4 5
    ExprList <node> (72)
        on left: 24 25
        on right: 18 25
    Type <dtype> (73)
        on left: 26 27 28 29
        on right: 16 17 21
    Instrs <node> (74)
        on left: 30 31
        on right: 1 31 45 46 47 49 50 51 53 56
    Instr <node> (75)
        on left: 32 33 34 35 36 37 38 39
        on right: 31
    Assign <node> (76)
        on left: 40 41 42
        on right: 32
    Print <node> (77)
        on left: 43
        on right: 33
    Input <node> (78)
        on left: 44
        on right: 38
    If <node> (79)
        on left: 45
        on right: 34
    OptElse <node> (80)
        on left: 46 47 48
        on right: 45
    While <node> (81)
        on left: 49
        on right: 35
    For <node> (82)
        on left: 50
        on right: 36
    ForEach <node> (83)
        on left: 51
        on right: 39
    Case <node> (84)
        on left: 52 53
        on right: 37
    CaseList <node> (85)
        on left: 54 55
        on right: 52 53 55
    CaseItem <node> (86)
        on left: 56
        on right: 54 55
    Expr <node> (87)
        on left: 57 58 59
        on right: 19 22 24 25 40 41 42 43 50 57 58 71 72 77 78 79 80 81 82
    Term <node> (88)
        on left: 60 61 62 63
        on right: 57 58 59 60 61 62
    Factor <node> (89)
        on left: 64 65 66 67 68 69 70 71 72 73
        on right: 60 61 62 63 73
    Cond <node> (90)
        on left: 74 75 76 77 78 79 80 81 82 83
        on right: 45 49 56 74 75 76 83


State 0

    0 $accept: • Program $end

    KW_BEGIN  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: KW_BEGIN • KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON

    KW_PROGRAM  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: KW_BEGIN KW_PROGRAM • IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER • SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON

    SEP_SEMICOLON  shift, and go to state 6


State 6

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON • Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON

    $default  reduce using rule 3 (Decls)

    Decls  go to state 7


State 7

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls • Instrs KW_END KW_PROGRAM SEP_SEMICOLON
    2 Decls: Decls • Decl

    KW_SET     shift, and go to state 8
    KW_CREATE  shift, and go to state 9

    $default  reduce using rule 30 (Instrs)

    Decl        go to state 10
    RecordDecl  go to state 11
    ArrayDecl   go to state 12
    DictDecl    go to state 13
    Instrs      go to state 14


State 8

    4 Decl: KW_SET • IDENTIFIER BasicType OptInit SEP_SEMICOLON
    5     | KW_SET • IDENTIFIER IDENTIFIER OptInit SEP_SEMICOLON
   17 ArrayDecl: KW_SET • IDENTIFIER KW_ARRAY SEP_LBRACKET Type SEP_COMMA INT_LITERAL SEP_RBRACKET ArrayInit SEP_SEMICOLON
   21 DictDecl: KW_SET • IDENTIFIER KW_DICTIONARY OP_LT Type SEP_COMMA Type OP_GT SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 15


State 9

   13 RecordDecl: KW_CREATE • KW_RECORD IDENTIFIER SEP_LPAREN FieldList SEP_RPAREN SEP_SEMICOLON

    KW_RECORD  shift, and go to state 16


State 10

    2 Decls: Decls Decl •

    $default  reduce using rule 2 (Decls)


State 11

    6 Decl: RecordDecl •

    $default  reduce using rule 6 (Decl)


State 12

    7 Decl: ArrayDecl •

    $default  reduce using rule 7 (Decl)


State 13

    8 Decl: DictDecl •

    $default  reduce using rule 8 (Decl)


State 14

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs • KW_END KW_PROGRAM SEP_SEMICOLON
   31 Instrs: Instrs • Instr

    IDENTIFIER  shift, and go to state 17
    KW_END      shift, and go to state 18
    KW_WHEN     shift, and go to state 19
    KW_CASE     shift, and go to state 20
    KW_LOOP     shift, and go to state 21
    KW_FOREACH  shift, and go to state 22
    KW_PRINT    shift, and go to state 23
    KW_INPUT    shift, and go to state 24

    Instr    go to state 25
    Assign   go to state 26
    Print    go to state 27
    Input    go to state 28
    If       go to state 29
    While    go to state 30
    For      go to state 31
    ForEach  go to state 32
    Case     go to state 33


State 15

    4 Decl: KW_SET IDENTIFIER • BasicType OptInit SEP_SEMICOLON
    5     | KW_SET IDENTIFIER • IDENTIFIER OptInit SEP_SEMICOLON
   17 ArrayDecl: KW_SET IDENTIFIER • KW_ARRAY SEP_LBRACKET Type SEP_COMMA INT_LITERAL SEP_RBRACKET ArrayInit SEP_SEMICOLON
   21 DictDecl: KW_SET IDENTIFIER • KW_DICTIONARY OP_LT Type SEP_COMMA Type OP_GT SEP_SEMICOLON

    IDENTIFIER     shift, and go to state 34
    KW_ARRAY       shift, and go to state 35
    KW_DICTIONARY  shift, and go to state 36
    KW_INTEGER     shift, and go to state 37
    KW_STRING      shift, and go to state 38
    KW_FLOAT       shift, and go to state 39
    KW_BOOLEAN     shift, and go to state 40

    BasicType  go to state 41


State 16

   13 RecordDecl: KW_CREATE KW_RECORD • IDENTIFIER SEP_LPAREN FieldList SEP_RPAREN SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 42


State 17

   40 Assign: IDENTIFIER • OP_EQ Expr SEP_SEMICOLON
   41       | IDENTIFIER • SEP_DOT IDENTIFIER OP_EQ Expr SEP_SEMICOLON
   42       | IDENTIFIER • SEP_LBRACKET Expr SEP_RBRACKET OP_EQ Expr SEP_SEMICOLON

    OP_EQ         shift, and go to state 43
    SEP_LBRACKET  shift, and go to state 44
    SEP_DOT       shift, and go to state 45


State 18

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END • KW_PROGRAM SEP_SEMICOLON

    KW_PROGRAM  shift, and go to state 46


State 19

   45 If: KW_WHEN • Cond KW_THEN Instrs OptElse KW_END KW_WHEN SEP_SEMICOLON

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_NOT          shift, and go to state 53
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 55

    Expr    go to state 56
    Term    go to state 57
    Factor  go to state 58
    Cond    go to state 59


State 20

   52 Case: KW_CASE • CaseList KW_END KW_CASE SEP_SEMICOLON
   53     | KW_CASE • CaseList KW_ELSE Instrs KW_END KW_CASE SEP_SEMICOLON

    KW_WHEN  shift, and go to state 60

    CaseList  go to state 61
    CaseItem  go to state 62


State 21

   49 While: KW_LOOP • KW_WHEN Cond Instrs KW_END KW_LOOP SEP_SEMICOLON
   50 For: KW_LOOP • KW_ITERATE IDENTIFIER KW_FROM Expr KW_TO Expr Instrs KW_END KW_LOOP SEP_SEMICOLON

    KW_WHEN     shift, and go to state 63
    KW_ITERATE  shift, and go to state 64


State 22

   51 ForEach: KW_FOREACH • IDENTIFIER KW_IN IDENTIFIER SEP_LBRACE Instrs SEP_RBRACE

    IDENTIFIER  shift, and go to state 65


State 23

   43 Print: KW_PRINT • Expr SEP_SEMICOLON

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 67
    Term    go to state 57
    Factor  go to state 58


State 24

   44 Input: KW_INPUT • IDENTIFIER SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 68


State 25

   31 Instrs: Instrs Instr •

    $default  reduce using rule 31 (Instrs)


State 26

   32 Instr: Assign •

    $default  reduce using rule 32 (Instr)


State 27

   33 Instr: Print •

    $default  reduce using rule 33 (Instr)


State 28

   38 Instr: Input •

    $default  reduce using rule 38 (Instr)


State 29

   34 Instr: If •

    $default  reduce using rule 34 (Instr)


State 30

   35 Instr: While •

    $default  reduce using rule 35 (Instr)


State 31

   36 Instr: For •

    $default  reduce using rule 36 (Instr)


State 32

   39 Instr: ForEach •

    $default  reduce using rule 39 (Instr)


State 33

   37 Instr: Case •

    $default  reduce using rule 37 (Instr)


State 34

    5 Decl: KW_SET IDENTIFIER IDENTIFIER • OptInit SEP_SEMICOLON

    OP_EQ  shift, and go to state 69

    $default  reduce using rule 23 (OptInit)

    OptInit  go to state 70


State 35

   17 ArrayDecl: KW_SET IDENTIFIER KW_ARRAY • SEP_LBRACKET Type SEP_COMMA INT_LITERAL SEP_RBRACKET ArrayInit SEP_SEMICOLON

    SEP_LBRACKET  shift, and go to state 71


State 36

   21 DictDecl: KW_SET IDENTIFIER KW_DICTIONARY • OP_LT Type SEP_COMMA Type OP_GT SEP_SEMICOLON

    OP_LT  shift, and go to state 72


State 37

    9 BasicType: KW_INTEGER •

    $default  reduce using rule 9 (BasicType)


State 38

   10 BasicType: KW_STRING •

    $default  reduce using rule 10 (BasicType)


State 39

   11 BasicType: KW_FLOAT •

    $default  reduce using rule 11 (BasicType)


State 40

   12 BasicType: KW_BOOLEAN •

    $default  reduce using rule 12 (BasicType)


State 41

    4 Decl: KW_SET IDENTIFIER BasicType • OptInit SEP_SEMICOLON

    OP_EQ  shift, and go to state 69

    $default  reduce using rule 23 (OptInit)

    OptInit  go to state 73


State 42

   13 RecordDecl: KW_CREATE KW_RECORD IDENTIFIER • SEP_LPAREN FieldList SEP_RPAREN SEP_SEMICOLON

    SEP_LPAREN  shift, and go to state 74


State 43

   40 Assign: IDENTIFIER OP_EQ • Expr SEP_SEMICOLON

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 75
    Term    go to state 57
    Factor  go to state 58


State 44

   42 Assign: IDENTIFIER SEP_LBRACKET • Expr SEP_RBRACKET OP_EQ Expr SEP_SEMICOLON

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 76
    Term    go to state 57
    Factor  go to state 58


State 45

   41 Assign: IDENTIFIER SEP_DOT • IDENTIFIER OP_EQ Expr SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 77


State 46

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM • SEP_SEMICOLON

    SEP_SEMICOLON  shift, and go to state 78


State 47

   69 Factor: IDENTIFIER •
   70       | IDENTIFIER • SEP_DOT IDENTIFIER
   71       | IDENTIFIER • SEP_LBRACKET Expr SEP_RBRACKET

    SEP_LBRACKET  shift, and go to state 79
    SEP_DOT       shift, and go to state 80

    $default  reduce using rule 69 (Factor)


State 48

   66 Factor: STRING_LITERAL •

    $default  reduce using rule 66 (Factor)


State 49

   64 Factor: INT_LITERAL •

    $default  reduce using rule 64 (Factor)


State 50

   65 Factor: FLOAT_LITERAL •

    $default  reduce using rule 65 (Factor)


State 51

   67 Factor: KW_TRUE •

    $default  reduce using rule 67 (Factor)


State 52

   68 Factor: KW_FALSE •

    $default  reduce using rule 68 (Factor)


State 53

   76 Cond: OP_NOT • Cond

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_NOT          shift, and go to state 53
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 55

    Expr    go to state 56
    Term    go to state 57
    Factor  go to state 58
    Cond    go to state 81


State 54

   73 Factor: OP_MINUS • Factor

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Factor  go to state 82


State 55

   72 Factor: SEP_LPAREN • Expr SEP_RPAREN
   83 Cond: SEP_LPAREN • Cond SEP_RPAREN

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_NOT          shift, and go to state 53
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 55

    Expr    go to state 83
    Term    go to state 57
    Factor  go to state 58
    Cond    go to state 84


State 56

   57 Expr: Expr • OP_PLUS Term
   58     | Expr • OP_MINUS Term
   77 Cond: Expr • OP_EQ Expr
   78     | Expr • OP_NEQ Expr
   79     | Expr • OP_LT Expr
   80     | Expr • OP_GT Expr
   81     | Expr • OP_LTE Expr
   82     | Expr • OP_GTE Expr

    OP_EQ     shift, and go to state 85
    OP_NEQ    shift, and go to state 86
    OP_LT     shift, and go to state 87
    OP_GT     shift, and go to state 88
    OP_LTE    shift, and go to state 89
    OP_GTE    shift, and go to state 90
    OP_PLUS   shift, and go to state 91
    OP_MINUS  shift, and go to state 92


State 57

   59 Expr: Term •
   60 Term: Term • OP_MULT Factor
   61     | Term • OP_DIV Factor
   62     | Term • OP_MOD Factor

    OP_MULT  shift, and go to state 93
    OP_DIV   shift, and go to state 94
    OP_MOD   shift, and go to state 95

    $default  reduce using rule 59 (Expr)


State 58

   63 Term: Factor •

    $default  reduce using rule 63 (Term)


State 59

   45 If: KW_WHEN Cond • KW_THEN Instrs OptElse KW_END KW_WHEN SEP_SEMICOLON
   74 Cond: Cond • OP_AND Cond
   75     | Cond • OP_OR Cond

    KW_THEN  shift, and go to state 96
    OP_AND   shift, and go to state 97
    OP_OR    shift, and go to state 98


State 60

   56 CaseItem: KW_WHEN • Cond KW_THEN Instrs

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_NOT          shift, and go to state 53
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 55

    Expr    go to state 56
    Term    go to state 57
    Factor  go to state 58
    Cond    go to state 99


State 61

   52 Case: KW_CASE CaseList • KW_END KW_CASE SEP_SEMICOLON
   53     | KW_CASE CaseList • KW_ELSE Instrs KW_END KW_CASE SEP_SEMICOLON
   55 CaseList: CaseList • CaseItem

    KW_END   shift, and go to state 100
    KW_WHEN  shift, and go to state 60
    KW_ELSE  shift, and go to state 101

    CaseItem  go to state 102


State 62

   54 CaseList: CaseItem •

    $default  reduce using rule 54 (CaseList)


State 63

   49 While: KW_LOOP KW_WHEN • Cond Instrs KW_END KW_LOOP SEP_SEMICOLON

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_NOT          shift, and go to state 53
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 55

    Expr    go to state 56
    Term    go to state 57
    Factor  go to state 58
    Cond    go to state 103


State 64

   50 For: KW_LOOP KW_ITERATE • IDENTIFIER KW_FROM Expr KW_TO Expr Instrs KW_END KW_LOOP SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 104


State 65

   51 ForEach: KW_FOREACH IDENTIFIER • KW_IN IDENTIFIER SEP_LBRACE Instrs SEP_RBRACE

    KW_IN  shift, and go to state 105


State 66

   72 Factor: SEP_LPAREN • Expr SEP_RPAREN

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 106
    Term    go to state 57
    Factor  go to state 58


State 67

   43 Print: KW_PRINT Expr • SEP_SEMICOLON
   57 Expr: Expr • OP_PLUS Term
   58     | Expr • OP_MINUS Term

    OP_PLUS        shift, and go to state 91
    OP_MINUS       shift, and go to state 92
    SEP_SEMICOLON  shift, and go to state 107


State 68

   44 Input: KW_INPUT IDENTIFIER • SEP_SEMICOLON

    SEP_SEMICOLON  shift, and go to state 108


State 69

   22 OptInit: OP_EQ • Expr

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 109
    Term    go to state 57
    Factor  go to state 58


State 70

    5 Decl: KW_SET IDENTIFIER IDENTIFIER OptInit • SEP_SEMICOLON

    SEP_SEMICOLON  shift, and go to state 110


State 71

   17 ArrayDecl: KW_SET IDENTIFIER KW_ARRAY SEP_LBRACKET • Type SEP_COMMA INT_LITERAL SEP_RBRACKET ArrayInit SEP_SEMICOLON

    KW_INTEGER  shift, and go to state 111
    KW_STRING   shift, and go to state 112
    KW_FLOAT    shift, and go to state 113
    KW_BOOLEAN  shift, and go to state 114

    Type  go to state 115


State 72

   21 DictDecl: KW_SET IDENTIFIER KW_DICTIONARY OP_LT • Type SEP_COMMA Type OP_GT SEP_SEMICOLON

    KW_INTEGER  shift, and go to state 111
    KW_STRING   shift, and go to state 112
    KW_FLOAT    shift, and go to state 113
    KW_BOOLEAN  shift, and go to state 114

    Type  go to state 116


State 73

    4 Decl: KW_SET IDENTIFIER BasicType OptInit • SEP_SEMICOLON

    SEP_SEMICOLON  shift, and go to state 117


State 74

   13 RecordDecl: KW_CREATE KW_RECORD IDENTIFIER SEP_LPAREN • FieldList SEP_RPAREN SEP_SEMICOLON

    IDENTIFIER  shift, and go to state 118

    FieldList  go to state 119
    Field      go to state 120


State 75

   40 Assign: IDENTIFIER OP_EQ Expr • SEP_SEMICOLON
   57 Expr: Expr • OP_PLUS Term
   58     | Expr • OP_MINUS Term

    OP_PLUS        shift, and go to state 91
    OP_MINUS       shift, and go to state 92
    SEP_SEMICOLON  shift, and go to state 121


State 76

   42 Assign: IDENTIFIER SEP_LBRACKET Expr • SEP_RBRACKET OP_EQ Expr SEP_SEMICOLON
   57 Expr: Expr • OP_PLUS Term
   58     | Expr • OP_MINUS Term

    OP_PLUS       shift, and go to state 91
    OP_MINUS      shift, and go to state 92
    SEP_RBRACKET  shift, and go to state 122


State 77

   41 Assign: IDENTIFIER SEP_DOT IDENTIFIER • OP_EQ Expr SEP_SEMICOLON

    OP_EQ  shift, and go to state 123


State 78

    1 Program: KW_BEGIN KW_PROGRAM IDENTIFIER SEP_SEMICOLON Decls Instrs KW_END KW_PROGRAM SEP_SEMICOLON •

    $default  reduce using rule 1 (Program)


State 79

   71 Factor: IDENTIFIER SEP_LBRACKET • Expr SEP_RBRACKET

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 124
    Term    go to state 57
    Factor  go to state 58


State 80

   70 Factor: IDENTIFIER SEP_DOT • IDENTIFIER

    IDENTIFIER  shift, and go to state 125


State 81

   74 Cond: Cond • OP_AND Cond
   75     | Cond • OP_OR Cond
   76     | OP_NOT Cond •

    $default  reduce using rule 76 (Cond)


State 82

   73 Factor: OP_MINUS Factor •

    $default  reduce using rule 73 (Factor)


State 83

   57 Expr: Expr • OP_PLUS Term
   58     | Expr • OP_MINUS Term
   72 Factor: SEP_LPAREN Expr • SEP_RPAREN
   77 Cond: Expr • OP_EQ Expr
   78     | Expr • OP_NEQ Expr
   79     | Expr • OP_LT Expr
   80     | Expr • OP_GT Expr
   81     | Expr • OP_LTE Expr
   82     | Expr • OP_GTE Expr

    OP_EQ       shift, and go to state 85
    OP_NEQ      shift, and go to state 86
    OP_LT       shift, and go to state 87
    OP_GT       shift, and go to state 88
    OP_LTE      shift, and go to state 89
    OP_GTE      shift, and go to state 90
    OP_PLUS     shift, and go to state 91
    OP_MINUS    shift, and go to state 92
    SEP_RPAREN  shift, and go to state 126


State 84

   74 Cond: Cond • OP_AND Cond
   75     | Cond • OP_OR Cond
   83     | SEP_LPAREN Cond • SEP_RPAREN

    OP_AND      shift, and go to state 97
    OP_OR       shift, and go to state 98
    SEP_RPAREN  shift, and go to state 127


State 85

   77 Cond: Expr OP_EQ • Expr

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 128
    Term    go to state 57
    Factor  go to state 58


State 86

   78 Cond: Expr OP_NEQ • Expr

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 129
    Term    go to state 57
    Factor  go to state 58


State 87

   79 Cond: Expr OP_LT • Expr

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66

    Expr    go to state 130
    Term    go to state 57
    Factor  go to state 58


State 88

   80 Cond: Expr OP_GT • Expr

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    INT_LITERAL     shift, and go to state 49
    FLOAT_LITERAL   shift, and go to state 50
    KW_TRUE         shift, and go to state 51
    KW_FALSE        shift, and go to state 52
    OP_MINUS        shift, and go to state 54
    SEP_LPAREN      shift, and go to state 66
